--- a/about.html
+++ b/about.html
@@ -107,9 +107,10 @@
         <div>
           <strong>Get in touch</strong>
           <div class="list">
-            <a href="mailto:info@digitalnatives.co">info@digitalnatives.co</a>
-            <a href="tel:+1234567890">+1 (234) 567-890</a>
-            <a href="https://wa.me/1234567890" target="_blank" rel="noopener">WhatsApp</a>
+            <a href="mailto:digitalnativu@gmail.com">digitalnativu@gmail.com</a>
+            <a href="tel:+255793911469">+255 (793) 911-469</a>
+            <a href="tel:+255684064292">+255 (684) 064-292</a>
+            <a href="https://wa.me/255684064292" target="_blank" rel="noopener">WhatsApp</a>
           </div>
         </div>
       </div>
