--- a/contact.html
+++ b/contact.html
@@ -44,9 +44,9 @@
             <div class="card">
               <h3>Contact Details</h3>
               <ul class="list">
-                <li><strong>Email:</strong> <a href="mailto:info@digitalnatives.co">info@digitalnatives.co</a></li>
-                <li><strong>Phone:</strong> <a href="tel:+1234567890">+1 (234) 567-890</a></li>
-                <li><strong>WhatsApp:</strong> <a href="https://wa.me/1234567890" target="_blank" rel="noopener">Chat on WhatsApp</a></li>
+                <li><strong>Email:</strong> <a href="mailto:digitalnativu@gmail.com">digitalnativu@gmail.com</a></li>
+                <li><strong>Phone:</strong> <a href="tel:+255793911469">+255 (793) 911-469</a></li>
+                <li><strong>WhatsApp:</strong> <a href="https://wa.me/255684064292" target="_blank" rel="noopener">Chat on WhatsApp</a></li>
                 <li><strong>Address:</strong> Add your office address here</li>
               </ul>
               <div class="muted">Office hours: Mon–Fri, 9am–5pm</div>
@@ -116,9 +116,9 @@
         <div>
           <strong>Get in touch</strong>
           <div class="list">
-            <a href="mailto:info@digitalnatives.co">info@digitalnatives.co</a>
-            <a href="tel:+1234567890">+1 (234) 567-890</a>
-            <a href="https://wa.me/1234567890" target="_blank" rel="noopener">WhatsApp</a>
+            <a href="mailto:digitalnativu@gmail.com">digitalnativu@gmail.com</a>
+            <a href="tel:+255793911469">+255 (793) 911-469</a>
+            <a href="https://wa.me/255684064292" target="_blank" rel="noopener">WhatsApp</a>
           </div>
         </div>
       </div>
