--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
             <img src="assets/logo.svg" alt="Digital Natives logo" />
             <span>Digital Natives</span>
           </div>
-          <div class="muted">Building modern digital experiences.</div>
+          <div class="muted">Building modern digital experiences</div>
         </div>
         <div>
           <strong>Company</strong>
